dot_config/waybar/style.css
/* Basicaly just bfpimentel's theme from https://www.reddit.com/r/unixporn/comments/1q4mlpg/yabai_apple_aint_forcing_me_to_have_rounded/ */

@define-color base   #1e1e2e;
@define-color mantle #181825;
@define-color crust  #11111b;
@define-color text   #cdd6f4;
@define-color blue   #89b4fa;
@define-color red    #f38ba8;
@define-color green  #a6e3a1;
@define-color yellow #f9e2af;
@define-color mauve  #cba6f7;
@define-color overlay1 #7f849c;
@define-color lavender #b4befe;

* {
  font-family:
    JetBrainsMono Nerd Font,
    FontAwesome;
  font-size: 12px;
}

#clock,
#battery,
#cpu,
#memory,
#disk,
#temperature,
#backlight,
#network,
#bluetooth,
#wireplumber,
#custom-media,
#tray,
#mode,
#idle_inhibitor,
#scratchpad,
#power-profiles-daemon,
#mpd,
#custom-power,
#window,
.not-power,
#workspaces button {
  color: @text;
  padding: 0px 5px;
}

.modules-left, .modules-center, .modules-right {
  background-color: @base;
  border-radius: 5px; 
  padding: 0px 4px;
}

window#waybar {
  /* background-color: @base; */
  background-color: rgba(30, 30, 46, 0);

  transition-property: background-color;
  transition-duration: 0.5s;
}

window#waybar.empty #window {
  background-color: transparent;
}

#workspaces {
}

#workspaces button {
  transition-property: background-color;
  transition-duration: 0.5s;

  /* Avoid rounded borders under each button name */
  border: none;
  border-radius: 0;
}

#workspaces button:hover {
  background: @text;
  color: @crust;
  box-shadow: inset 0 -3px @overlay1;
}

#workspaces button.focused,
#workspaces button.active {
  background-color: @text;
  color: @crust;
  border: 2px solid @overlay1;
}

#workspaces button.urgent {
  background-color: @red;
}

#mode {
  background-color: @text;
  color: #000000;
  border: 1px solid @overlay1;
}

#clock {
}

#battery {
}

#battery.charging,
#battery.plugged {
  color: @green;
}

@keyframes blink {
  to {
    background-color: @text;
    color: @crust;
  }
}

/* Using steps() instead of linear as a timing function to limit cpu usage */
#battery.critical:not(.charging) {
  background-color: @red;
  color: @text;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: steps(12);
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#power-profiles-daemon {
}

#power-profiles-daemon.performance {
  color: @red;
}

#power-profiles-daemon.balanced {
  color: @blue;
}

#power-profiles-daemon.power-saver {
  color: @green;
}

#temperature,
#cpu,
#memory,
#network,
#bluetooth {
}

#temperature {
  color: @yellow;
}

#temperature.critical {
  color: @red;
}

#cpu {
  color: @green;
}

#memory {
  color: @mauve;
}

#metrics {
}

#metrics:hover {
}

#backlight {
  color: @lavender;
}

#bluetooth {
  font-size: 16px;
}

#network,
#bluetooth.on {
  color: @blue;
}

#network.disconnected {
  color: @red;
  font-size: 14px;
}

#bluetooth.off {
  color: @red;
}

#wireplumber {
  color: @yellow;
}

#wireplumber.muted {
  color: @text;
}

#custom-media {
  background-color: @green;
  color: @green;
  min-width: 100px;
}

#custom-media.custom-spotify {
  background-color: @green;
}

#tray {
}

#tray > .passive {
  -gtk-icon-effect: dim;
}

#tray > .needs-attention {
  -gtk-icon-effect: highlight;
  background-color: @red;
}

#mpd {
  /* background-color: #66cc99; */
  color: @green;
}

#mpd.disconnected {
  /* background-color: #f53c3c; */
}

#mpd.stopped {
  /* background-color: #90b1b1; */
}

#mpd.paused {
  /* background-color: #51a37a; */
}

#scratchpad {
  background: @mantle;
}

#scratchpad.empty {
  background-color: transparent;
}

#custom-reboot {
    margin: 0 10px;
}

